re-write Representer classes from scratch